<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_left"
    android:layout_marginStart="@dimen/margin_left"
    android:layout_marginTop="@dimen/margin_top"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    tools:context=".Activities.techSkillsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tskillText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tech_skills"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/plus"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/skillslist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_left"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/techsubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
