<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_left"
    android:layout_marginStart="@dimen/margin_left"
    android:layout_marginTop="@dimen/margin_top"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    tools:context=".Activities.personalQualityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pqualText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_quality"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addqual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_weight="1"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:text="@string/plus" />
        </LinearLayout>

        <ListView
            android:id="@+id/qualitylist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
